*******************************************************************************
* RECENT CHANGES
*******************************************************************************

=== 1.0.9 ===
* Updated build scripts and dependencies.

=== 1.0.8 ===
* Updated compressor: added negative boosting gain option in 'Boosting' mode.
* Assigned more correct names for sidechain types.
* Updated build scripts and dependencies.

=== 1.0.7 ===
* Added german translations (contributed by Johannes Guenther).
* Updated build scripts and dependencies.

=== 1.0.6 ===
* Updated build scripts and dependencies.

=== 1.0.5 ===
* Updated dependencies and build scripts.

=== 1.0.4 ===
* Initial release.
