@@ -3,6 +3,7 @@
 *******************************************************************************
 
 === 1.0.9 ===
+* Added 'Min' and 'Max' sidechain sources for the compressor.
 * Updated build scripts and dependencies.
 
 === 1.0.8 ===
